--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build & Push to ghcr
+name: Docker
 
 on:
   push:
@@ -15,9 +15,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
-      actions: write  # This is needed for creating tagging/release actions
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -43,35 +42,37 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-      
+
       - name: Check out existing tags
         run: git fetch --tags
-      
+
       - name: Get latest tag
         id: latest_tag
-        run: echo "LATEST_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+        run: |
+          latest_tag=$(git describe --tags --abbrev=0)
+          echo "LATEST_TAG=${latest_tag}" >> $GITHUB_ENV
 
       - name: Create new tag and release
         id: create_release
         if: startsWith(env.LATEST_TAG, 'v')
         run: |
           latest_tag=${{ env.LATEST_TAG }}
-          major=${latest_tag:1:1} # Get the first character (major version)
-          minor=${latest_tag:3:1}  # Get the second character (minor version)
-          patch=${latest_tag:5:1}  # Get the third character (patch version)
+          major=${latest_tag:1:1} # Get major version
+          minor=${latest_tag:3:1}  # Get minor version
+          patch=${latest_tag:5:1}  # Get patch version
 
-          # Check if minor is below 9 to increment it; if it is 9, reset it back to 0 and increment major
-          if [ "$minor" -lt 9 ]; then
-            minor=$((minor + 1))
-            patch=0
+          if [ "$patch" -lt 9 ]; then
+            patch=$((patch + 1))
           else
-            # increment major and reset minor and patch back to 0
-            major=$((major + 1))
-            minor=0
             patch=0
+            if [ "$minor" -lt 9 ]; then
+              minor=$((minor + 1))
+            else
+              minor=0
+              major=$((major + 1))
+            fi
           fi
 
-          # Create new tag v<major>.<minor>.<patch>
           new_tag="v$major.$minor.$patch"
           echo "New Tag: $new_tag"
 
@@ -79,8 +80,8 @@ jobs:
           git tag "${new_tag}"
           git push origin "${new_tag}"
 
-          # Create GitHub Release
+          # Create GitHub Release - Adjust this if you want to use the gh CLI
           gh release create "${new_tag}" --title "${new_tag}" --notes "Release of version ${new_tag}" || echo "gh CLI not installed"
 
       - name: Output new tag
-        run: echo "New tag created: ${{ steps.create_release.outputs.new_tag }}"
+        run: echo "New tag created: $new_tag"
