--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write  # Grant permission to create tags/releases
       packages: write
     steps:
       - name: Checkout repository
@@ -48,9 +48,7 @@ jobs:
 
       - name: Get latest tag
         id: latest_tag
-        run: |
-          latest_tag=$(git describe --tags --abbrev=0)
-          echo "LATEST_TAG=${latest_tag}" >> $GITHUB_ENV
+        run: echo "LATEST_TAG=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
 
       - name: Create new tag and release
         id: create_release
@@ -74,6 +72,7 @@ jobs:
           fi
 
           new_tag="v$major.$minor.$patch"
+          
           echo "New Tag: $new_tag"
 
           # Create and push new tag
@@ -82,6 +81,3 @@ jobs:
 
           # Create GitHub Release - Adjust this if you want to use the gh CLI
           gh release create "${new_tag}" --title "${new_tag}" --notes "Release of version ${new_tag}" || echo "gh CLI not installed"
-
-      - name: Output new tag
-        run: echo "New tag created: $new_tag"
